🎨 Rebranding: Blueprint Meridian — new design identity, CSS rewrite, hexagonal monogram, blueprint grid

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Portafolio de Javier Gómez M — Ingeniería, Analítica de Datos e IA aplicada." />
-  <title>Javier Gómez M — Portafolio</title>
+  <meta name="description" content="Portafolio de Javier GÃ³mez M â€” IngenierÃ­a, AnalÃ­tica de Datos e IA aplicada." />
+  <title>Javier GÃ³mez M â€” Portafolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -16,12 +16,12 @@
 
 <body>
   <div class="bg"></div>
-  <div class="scanlines" aria-hidden="true"></div>
+  <div class="grid-overlay" aria-hidden="true"></div>
   <div class="noise" aria-hidden="true"></div>
 
   <header class="nav">
     <div class="nav__brand">
-      <span class="chip">JG</span>
+      <div class="nav__monogram" aria-hidden="true">JG</div>
       <span class="nav__title">ingjaviergomezm</span>
     </div>
 
@@ -36,23 +36,30 @@
   <main class="container">
     <section class="hero">
       <div class="hero__left">
-        <p class="kicker">Ingeniería • Datos • IA aplicada</p>
-        <h1 class="glitch" data-text="Javier Gómez M">Javier Gómez M</h1>
+        <div class="hero__label">
+          <span class="dot--pulse"></span>
+          <span class="mono">PORTAFOLIO &middot; 2025 &middot; COLOMBIA</span>
+        </div>
+
+        <h1>
+          <span class="glitch" data-text="Javier GÃ³mez M">Javier GÃ³mez M</span>
+        </h1>
 
         <p class="subtitle">
-          Ingeniero Industrial enfocado en <strong>confiabilidad</strong>, <strong>eficiencia energética</strong> y
-          <strong>analítica aplicada</strong> en Oil & Gas, energía y renovables.
+          Ingeniero Industrial enfocado en <strong>confiabilidad</strong>, <strong>eficiencia energÃ©tica</strong> y
+          <strong>analÃ­tica aplicada</strong> en Oil & Gas, energÃ­a y renovables.
         </p>
 
         <div class="cta">
-          <a class="btn" href="https://github.com/ingjaviergomezm" target="_blank" rel="noreferrer">GitHub</a>
+          <a class="btn btn--solid" href="https://github.com/ingjaviergomezm" target="_blank"
+            rel="noreferrer">GitHub</a>
           <a class="btn btn--ghost" href="#proyectos">Ver proyectos</a>
         </div>
 
         <div class="meta">
           <span class="tag">Colombia</span>
           <span class="tag">Oil & Gas</span>
-          <span class="tag">Energía/Renovables</span>
+          <span class="tag">EnergÃ­a/Renovables</span>
         </div>
       </div>
 
@@ -65,14 +72,14 @@
           </div>
           <div class="card__body">
             <p class="mono dim">STATUS</p>
-            <p class="mono">ONLINE • BUILDING PORTFOLIO</p>
+            <p class="mono">ONLINE â€¢ BUILDING PORTFOLIO</p>
             <div class="divider"></div>
 
             <p class="mono dim">FOCO</p>
             <ul class="list">
-              <li>Analítica para decisiones operativas</li>
-              <li>Eficiencia energética & renovables</li>
-              <li>Automatización (Excel/VBA)</li>
+              <li>AnalÃ­tica para decisiones operativas</li>
+              <li>Eficiencia energÃ©tica & renovables</li>
+              <li>AutomatizaciÃ³n (Excel/VBA)</li>
             </ul>
 
             <div class="divider"></div>
@@ -84,24 +91,26 @@
           </div>
         </div>
       </div>
+
+      <div class="hero__watermark" aria-hidden="true">JG</div>
     </section>
 
     <section id="proyectos" class="section">
-      <!-- Se dejó SOLO un encabezado de sección (el que dice 4 casos) -->
+      <!-- Se dejÃ³ SOLO un encabezado de secciÃ³n (el que dice 4 casos) -->
       <div class="section__head">
         <h2>Proyectos</h2>
-        <p class="dim">5 casos bien contados valen más que 30 repos vacíos.</p>
+        <p class="dim">5 casos bien contados valen mÃ¡s que 30 repos vacÃ­os.</p>
       </div>
 
       <div class="grid">
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 01</p>
-            <h3>Web APP de Autodiagnóstico Energético Interactivo (ISO 50001)</h3>
+            <h3>Web APP de AutodiagnÃ³stico EnergÃ©tico Interactivo (ISO 50001)</h3>
             <p class="dim">
-              Web app interactiva que permite a cualquier organización evaluar en minutos su desempeño energético,
-              descubrir oportunidades de ahorro y visualizar su punto de partida hacia un Sistema de Gestión de la
-              Energía
+              Web app interactiva que permite a cualquier organizaciÃ³n evaluar en minutos su desempeÃ±o energÃ©tico,
+              descubrir oportunidades de ahorro y visualizar su punto de partida hacia un Sistema de GestiÃ³n de la
+              EnergÃ­a
               alineado con ISO 50001.
             </p>
 
@@ -122,10 +131,10 @@
             <p class="mono dim">CASE 02</p>
             <h3>Dashboard Power BI</h3>
             <p class="dim">
-              Dashboard de Gestión de Mantenimiento basado en la norma ISO 14224 para centralizar datos de mantenimiento
+              Dashboard de GestiÃ³n de Mantenimiento basado en la norma ISO 14224 para centralizar datos de mantenimiento
               y
-              confiabilidad, monitorear el desempeño de activos y soportar decisiones orientadas a disponibilidad y
-              reducción
+              confiabilidad, monitorear el desempeÃ±o de activos y soportar decisiones orientadas a disponibilidad y
+              reducciÃ³n
               de costos
             </p>
             <div class="card__actions">
@@ -139,13 +148,13 @@
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 03</p>
-            <h3>Automatización VBA de reporte de novedades de nomina a RRHH</h3>
+            <h3>AutomatizaciÃ³n VBA de reporte de novedades de nomina a RRHH</h3>
             <p class="dim">
-              Herramienta en Microsoft Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático
+              Herramienta en Microsoft Excel + VBA para programaciÃ³n mensual de turnos de 12 horas, cÃ¡lculo automÃ¡tico
               de
-              recargos de nómina, análisis comparativo por trabajador, generación de reportes ejecutivos en PDF y
-              preparación
-              segura de archivos para distribución.
+              recargos de nÃ³mina, anÃ¡lisis comparativo por trabajador, generaciÃ³n de reportes ejecutivos en PDF y
+              preparaciÃ³n
+              segura de archivos para distribuciÃ³n.
             </p>
             <div class="card__actions">
               <a class="btn btn--small btn--ghost"
@@ -158,9 +167,9 @@
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 04</p>
-            <h3>Web App — Planificador técnico-financiero de proyectos solares con IA (Colombia)</h3>
+            <h3>Web App â€” Planificador tÃ©cnico-financiero de proyectos solares con IA (Colombia)</h3>
             <p class="dim">
-              Aplicación web para la evaluación técnica, económica y financiera de sistemas fotovoltaicos, incorporando
+              AplicaciÃ³n web para la evaluaciÃ³n tÃ©cnica, econÃ³mica y financiera de sistemas fotovoltaicos, incorporando
               modelos de inteligencia artificial y supuestos normativos del mercado colombiano.
             </p>
             <div class="card__actions">
@@ -220,31 +229,31 @@
     <section id="roadmap" class="section">
       <div class="section__head">
         <h2>Roadmap</h2>
-        <p class="dim">IA aplicada con mentalidad de ingeniería: medir → validar → decidir.</p>
+        <p class="dim">IA aplicada con mentalidad de ingenierÃ­a: medir â†’ validar â†’ decidir.</p>
       </div>
 
       <div class="timeline">
-        <!-- Se dejó SOLO la versión correcta (4 proyectos) y se removió el duplicado -->
+        <!-- Se dejÃ³ SOLO la versiÃ³n correcta (4 proyectos) y se removiÃ³ el duplicado -->
         <div class="tl__item">
           <div class="tl__badge">01</div>
           <div class="tl__content">
             <h3>Portafolio de casos</h3>
-            <p class="dim">4 proyectos end-to-end: problema real → datos → modelo → insight → acción.</p>
+            <p class="dim">4 proyectos end-to-end: problema real â†’ datos â†’ modelo â†’ insight â†’ acciÃ³n.</p>
           </div>
         </div>
 
         <div class="tl__item">
           <div class="tl__badge">02</div>
           <div class="tl__content">
-            <h3>Automatización y calidad de datos</h3>
-            <p class="dim">Pipelines simples (pero sólidos) + documentación + trazabilidad.</p>
+            <h3>AutomatizaciÃ³n y calidad de datos</h3>
+            <p class="dim">Pipelines simples (pero sÃ³lidos) + documentaciÃ³n + trazabilidad.</p>
           </div>
         </div>
 
         <div class="tl__item">
           <div class="tl__badge">03</div>
           <div class="tl__content">
-            <h3>Entrega y comunicación</h3>
+            <h3>Entrega y comunicaciÃ³n</h3>
             <p class="dim">Dashboards + reportes ejecutivos + repos reproducibles.</p>
           </div>
         </div>
@@ -254,7 +263,7 @@
     <section id="contacto" class="section">
       <div class="section__head">
         <h2>Contacto</h2>
-        <p class="dim">Si el problema huele a datos y a operación, me interesa.</p>
+        <p class="dim">Si el problema huele a datos y a operaciÃ³n, me interesa.</p>
       </div>
 
       <div class="card">
