🚀 Optimization: SEO & Professional Pitch based on CV. 10+ years experience highlight. Refined case studies.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-    content="Portafolio de Javier Gómez M — Ingeniería, Analítica de Datos e IA Agéntica aplicada." />
-  <title>Javier Gómez M — Portafolio</title>
+    content="Portafolio de Javier Gómez Martínez — Ingeniero Industrial con 10+ años de experiencia en Oil & Gas, Energía e IA Agéntica. Especialista en Confiabilidad y Analítica Operativa." />
+  <meta name="keywords"
+    content="Javier Gómez Martínez, Ingeniero Industrial, Oil and Gas, Colombia, IA Agéntica, Antigravity, Eficiencia Energética, Confiabilidad Operacional, Data Analytics, Power BI, Python, VBA, ISO 50001, ISO 14224" />
+  <title>Javier Gómez Martínez | Ingeniero Industrial & Especialista en IA Agéntica</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -43,12 +45,13 @@
         </div>
 
         <h1>
-          <span class="glitch" data-text="Javier Gómez M">Javier Gómez M</span>
+          <span class="glitch" data-text="Javier Gómez Martínez">Javier Gómez Martínez</span>
         </h1>
 
         <p class="subtitle">
-          Ingeniero Industrial enfocado en <strong>confiabilidad</strong>, <strong>eficiencia energética</strong> y
-          <strong>IA agéntica aplicada</strong> en Oil &amp; Gas, energía y renovables.
+          Ingeniero Industrial con <strong>10+ años de experiencia</strong> en la industria Oil &amp; Gas. Especialista
+          en <strong>confiabilidad</strong>, <strong>energías renovables</strong> e <strong>IA agéntica</strong>.
+          Automatizo la toma de decisiones mediante el puente entre la operación de campo y la analítica profunda.
         </p>
 
         <div class="cta">
@@ -169,8 +172,9 @@
             <p class="mono case-label">CASE 02</p>
             <h3>Dashboard de Mantenimiento y Confiabilidad (ISO 14224)</h3>
             <p class="dim">
-              Dashboard Power BI para centralizar datos de mantenimiento, monitorear desempeño de activos
-              y soportar decisiones orientadas a disponibilidad y reducción de costos.
+              Estandarización de flujos de datos bajo la norma ISO 14224 para activos críticos. Centralización de KPis
+              de confiabilidad, disponibilidad y mantenibilidad para soporte de toma de decisiones en operaciones
+              industriales.
             </p>
             <div class="tech-tags">
               <span class="tech">Power BI</span>
@@ -192,8 +196,9 @@
             <p class="mono case-label">CASE 03</p>
             <h3>Automatización VBA de Turnos y Nómina</h3>
             <p class="dim">
-              Herramienta Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático
-              de recargos, análisis por trabajador y generación de reportes ejecutivos en PDF.
+              Automatización de programación de turnos y reporte de novedades de nómina. Integración de normatividad
+              laboral colombiana mediante macros avanzadas, logrando reducir el tiempo de procesamiento manual en un
+              80%.
             </p>
             <div class="tech-tags">
               <span class="tech">Excel</span>
@@ -215,8 +220,9 @@
             <p class="mono case-label">CASE 04</p>
             <h3>Planificador Solar con IA (Colombia)</h3>
             <p class="dim">
-              Aplicación web para evaluación técnica, económica y financiera de sistemas fotovoltaicos,
-              con modelos de IA y supuestos normativos del mercado colombiano.
+              Calculador financiero-técnico diseñado para la viabilidad de sistemas fotovoltaicos en el mercado
+              colombiano. Integra modelos de IA para estimaciones de generación y retorno de inversión bajo normatividad
+              vigente.
             </p>
             <div class="tech-tags">
               <span class="tech">Python</span>
