✍️ Copywriting B2B: Impact-first project descriptions and aggressive B2B pitch injected

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </h1>
 
         <p class="subtitle">
-          Ingeniero Industrial con <strong>10+ años de experiencia</strong> en la industria Oil &amp; Gas. Especialista
-          en <strong>confiabilidad</strong>, <strong>energías renovables</strong> e <strong>IA agéntica</strong>.
-          Automatizo la toma de decisiones mediante el puente entre la operación de campo y la analítica profunda.
+          Transformo la complejidad operativa en eficiencia automatizada. Como Ingeniero Industrial con <strong>10+ años
+            en el core de Oil &amp; Gas</strong>, conecto la dura realidad del campo con analítica avanzada e <strong>IA
+            Agéntica</strong> para que las empresas tomen decisiones más rápidas, seguras y rentables.
         </p>
 
         <div class="cta">
@@ -82,7 +82,7 @@
 
             <p class="mono dim">ESPECIALIDADES</p>
             <ul class="list">
-              <li>Analítica operativa &amp; Business Intelligence</li>
+              <li>Analítica para decisiones críticas</li>
               <li>IA Agéntica aplicada (Antigravity / Gemini)</li>
               <li>Eficiencia energética &amp; renovables</li>
             </ul>
@@ -172,9 +172,9 @@
             <p class="mono case-label">CASE 02</p>
             <h3>Dashboard de Mantenimiento y Confiabilidad (ISO 14224)</h3>
             <p class="dim">
-              Estandarización de flujos de datos bajo la norma ISO 14224 para activos críticos. Centralización de KPis
-              de confiabilidad, disponibilidad y mantenibilidad para soporte de toma de decisiones en operaciones
-              industriales.
+              <strong>Inteligencia de Mantenimiento y Confiabilidad.</strong> Centralización estratégica de KPIs para
+              activos críticos. Transformación de datos dispersos en un motor de decisiones para maximizar
+              disponibilidad y reducir costos.
             </p>
             <div class="tech-tags">
               <span class="tech">Power BI</span>
@@ -196,9 +196,8 @@
             <p class="mono case-label">CASE 03</p>
             <h3>Automatización VBA de Turnos y Nómina</h3>
             <p class="dim">
-              Automatización de programación de turnos y reporte de novedades de nómina. Integración de normatividad
-              laboral colombiana mediante macros avanzadas, logrando reducir el tiempo de procesamiento manual en un
-              80%.
+              <strong>Reducción del 80% en tiempos operativos de RRHH.</strong> Sistema experto que automatiza la
+              programación de turnos y novedades de nómina bajo normatividad colombiana, eliminando errores manuales.
             </p>
             <div class="tech-tags">
               <span class="tech">Excel</span>
