feat(portfolio): agragar card de caso Axiona

--- a/index.html
+++ b/index.html
@@ -139,6 +139,33 @@
           </div>
         </article>
 
+        <!-- Case 06: Axiona -->
+        <article class="card" data-tilt>
+          <div class="card__shine"></div>
+          <div class="card__body">
+            <p class="mono case-label">CASE 06</p>
+            <h3>Axiona &mdash; Ecosistema Antiprocrastinación IA</h3>
+            <p class="dim">
+              <strong>Gestión de Productividad Inteligente.</strong> Aplicación Front-End interactiva (React + Tailwind
+              v4) que orquesta tres metodologías probadas (Eisenhower, Kanban, Pomodoro) potenciadas por <strong>Gemini
+                AI</strong> para el desglose automático de tareas y coaching operativo analítico. Demuestra arquitectura
+              de UI/UX modernos y consumo eficiente de APIs de IA.
+            </p>
+            <div class="tech-tags">
+              <span class="tech">React</span>
+              <span class="tech">Tailwind v4</span>
+              <span class="tech">Gemini API</span>
+              <span class="tech">IA</span>
+            </div>
+            <div class="card__actions">
+              <a class="btn btn--small btn--ghost" href="https://ingjaviergomezm.github.io/Axiona/" target="_blank"
+                rel="noopener noreferrer">Demo</a>
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/Axiona" target="_blank"
+                rel="noopener noreferrer">Repo</a>
+            </div>
+          </div>
+        </article>
+
         <!-- Case 01 -->
         <article class="card" data-tilt>
           <div class="card__shine"></div>
